--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
       </nav>
       <button type="button">Action</button>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h1>Medium length display headline</h1>
+        <p>
+          Separated they live in Bookmarks right at the coast of the famous
+          Semantics, large language
+        </p>
+        <button type="button">Action</button>
+        <p>5,000 people like you have purchased this product!</p>
+        <img src="./images/hero-img.jpg" alt="room" width="553" height="428" />
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
