--- a/index.html
+++ b/index.html
@@ -31,6 +31,35 @@
         <p>5,000 people like you have purchased this product!</p>
         <img src="./images/hero-img.jpg" alt="room" width="553" height="428" />
       </section>
+      <section>
+        <h2 hidden>Advantages</h2>
+        <ul>
+          <li>
+            <h3>
+              Feature one
+            </h3>
+            <p>
+              All base UI elements are made using Nested Symbols and shared styles that are logically connected with one another.
+            </p>
+          </li>
+          <li>
+            <h3>
+              Feature two
+            </h3>
+            <p>
+              All base UI elements are made using Nested Symbols and shared styles that are logically connected with one another.
+            </p>
+          </li>
+          <li>
+            <h3>
+              Feature three
+            </h3>
+            <p>
+            All base UI elements are made using Nested Symbols and shared styles that are logically connected with one another.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
