--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Long headline on two lines to turn your visitors into users and achieve more</h2>
+        <p>Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean</p>
+        <ul>
+          <li>Showcase and embed your work with</li>
+          <li>Publish across social channels in a click</li>
+          <li>Sell your videos worldwide</li>
+          <li>Embed your work with</li>
+        </ul>
+        <img src="./images/example-img.jpg" alt="shelf with dishes" width="550" height="428">
+      </section>
     </main>
     <footer></footer>
   </body>
