--- a/index.html
+++ b/index.html
@@ -71,6 +71,29 @@
         </ul>
         <img src="./images/example-img.jpg" alt="shelf with dishes" width="550" height="428">
       </section>
+      <section>
+        <h2>review</h2>
+<ul>
+  <li><p>A testimonial describing what the person thinks about this service, product or startup in general.</p>
+  <img width="64" height="64" src="./images/img-monika.png" alt="monika">
+  <h3>Name Surname</h3>
+  <p>Description</p>
+</li>
+  <li>
+    <p>A testimonial describing what the person thinks about this service, product or startup in general.</p>
+    <img width="64" height="64" src="./images/img-paula.png" alt="paula">
+    <h3>Name Surname</h3>
+    <p>Description</p>
+  </li>
+<li>
+  <p>A testimonial describing what the person thinks about this service, product or startup in general.</p>
+  <img width="64" height="64" src="./images/img-dominik.png" alt="dominik">
+  <h3>Name Surname</h3>
+  <p>Description</p>
+</li>
+</ul>
+      </section>
+      
     </main>
     <footer></footer>
   </body>
