--- a/index.html
+++ b/index.html
@@ -93,8 +93,29 @@
 </li>
 </ul>
       </section>
-      
-    </main>
-    <footer></footer>
+      <section>
+      <p>Tagline</p>
+      <h2>Long headline to turn your visitors into users</h2>
+      <button type="button">Action</button>
+      </section>
+  </main>
+
+    <footer>
+      <a href="./index.html">brand <sup>tm</sup></a>
+      <p>First column</p>
+      <ul>
+        <li>First page</li>
+        <li>Second page</li>
+        <li>Third</li>
+        <li>Fourth</li>
+      </ul>
+      <p>Second</p>
+      <ul>
+        <li>Fifth page</li>
+        <li>Sixth page</li>
+        <li>Eighth</li>
+      </ul>
+
+    </footer>
   </body>
 </html>
