--- a/index.html
+++ b/index.html
@@ -35,70 +35,103 @@
         <h2 hidden>Advantages</h2>
         <ul>
           <li>
-            <h3>
-              Feature one
-            </h3>
+            <h3>Feature one</h3>
             <p>
-              All base UI elements are made using Nested Symbols and shared styles that are logically connected with one another.
+              All base UI elements are made using Nested Symbols and shared
+              styles that are logically connected with one another.
             </p>
           </li>
           <li>
-            <h3>
-              Feature two
-            </h3>
+            <h3>Feature two</h3>
             <p>
-              All base UI elements are made using Nested Symbols and shared styles that are logically connected with one another.
+              All base UI elements are made using Nested Symbols and shared
+              styles that are logically connected with one another.
             </p>
           </li>
           <li>
-            <h3>
-              Feature three
-            </h3>
+            <h3>Feature three</h3>
             <p>
-            All base UI elements are made using Nested Symbols and shared styles that are logically connected with one another.
+              All base UI elements are made using Nested Symbols and shared
+              styles that are logically connected with one another.
             </p>
           </li>
         </ul>
       </section>
       <section>
-        <h2>Long headline on two lines to turn your visitors into users and achieve more</h2>
-        <p>Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean</p>
+        <h2>
+          Long headline on two lines to turn your visitors into users and
+          achieve more
+        </h2>
+        <p>
+          Separated they live in Bookmarks right at the coast of the famous
+          Semantics, large language ocean
+        </p>
         <ul>
           <li>Showcase and embed your work with</li>
           <li>Publish across social channels in a click</li>
           <li>Sell your videos worldwide</li>
           <li>Embed your work with</li>
         </ul>
-        <img src="./images/example-img.jpg" alt="shelf with dishes" width="550" height="428">
+        <img
+          src="./images/example-img.jpg"
+          alt="shelf with dishes"
+          width="550"
+          height="428"
+        />
       </section>
       <section>
         <h2>review</h2>
-<ul>
-  <li><p>A testimonial describing what the person thinks about this service, product or startup in general.</p>
-  <img width="64" height="64" src="./images/img-monika.png" alt="monika">
-  <h3>Name Surname</h3>
-  <p>Description</p>
-</li>
-  <li>
-    <p>A testimonial describing what the person thinks about this service, product or startup in general.</p>
-    <img width="64" height="64" src="./images/img-paula.png" alt="paula">
-    <h3>Name Surname</h3>
-    <p>Description</p>
-  </li>
-<li>
-  <p>A testimonial describing what the person thinks about this service, product or startup in general.</p>
-  <img width="64" height="64" src="./images/img-dominik.png" alt="dominik">
-  <h3>Name Surname</h3>
-  <p>Description</p>
-</li>
-</ul>
+        <ul>
+          <li>
+            <p>
+              A testimonial describing what the person thinks about this
+              service, product or startup in general.
+            </p>
+            <img
+              width="64"
+              height="64"
+              src="./images/img-monika.png"
+              alt="monika"
+            />
+            <h3>Name Surname</h3>
+            <p>Description</p>
+          </li>
+          <li>
+            <p>
+              A testimonial describing what the person thinks about this
+              service, product or startup in general.
+            </p>
+            <img
+              width="64"
+              height="64"
+              src="./images/img-paula.png"
+              alt="paula"
+            />
+            <h3>Name Surname</h3>
+            <p>Description</p>
+          </li>
+          <li>
+            <p>
+              A testimonial describing what the person thinks about this
+              service, product or startup in general.
+            </p>
+            <img
+              width="64"
+              height="64"
+              src="./images/img-dominik.png"
+              alt="dominik"
+            />
+            <h3>Name Surname</h3>
+            <p>Description</p>
+          </li>
+        </ul>
       </section>
       <section>
-      <p>Tagline</p>
-      <h2>Long headline to turn your visitors into users</h2>
-      <button type="button">Action</button>
+        <p>Tagline</p>
+        <h2>Long headline to turn your visitors into users</h2>
+        <button type="button">Action</button>
       </section>
-  </main>
+    </main>
 
     <footer>
       <a href="./index.html">brand <sup>tm</sup></a>
@@ -115,7 +148,15 @@
         <li>Sixth page</li>
         <li>Eighth</li>
       </ul>
-
+      <p>Third</p>
+      <ul>
+        <li>Fifth page</li>
+        <li>Sixth page</li>
+        <li>Eighth</li>
+      </ul>
+      <p>Subscribe</p>
+      <input type="text" placeholder="Enter email" />
+      <p>Join our newsletter to stay up to date on features and releases</p>
     </footer>
   </body>
 </html>
