--- a/index.html
+++ b/index.html
@@ -1,162 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <header>
-      <a href="./index.html">brand <sup>tm</sup></a>
-      <nav>
-        <ul>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-          <li><a href="#">Link 4</a></li>
-          <li><a href="#">Link 5</a></li>
-        </ul>
-      </nav>
-      <button type="button">Action</button>
-    </header>
-    <main>
-      <section>
-        <h1>Medium length display headline</h1>
-        <p>
-          Separated they live in Bookmarks right at the coast of the famous
-          Semantics, large language
-        </p>
-        <button type="button">Action</button>
-        <p>5,000 people like you have purchased this product!</p>
-        <img src="./images/hero-img.jpg" alt="room" width="553" height="428" />
-      </section>
-      <section>
-        <h2 hidden>Advantages</h2>
-        <ul>
-          <li>
-            <h3>Feature one</h3>
-            <p>
-              All base UI elements are made using Nested Symbols and shared
-              styles that are logically connected with one another.
-            </p>
-          </li>
-          <li>
-            <h3>Feature two</h3>
-            <p>
-              All base UI elements are made using Nested Symbols and shared
-              styles that are logically connected with one another.
-            </p>
-          </li>
-          <li>
-            <h3>Feature three</h3>
-            <p>
-              All base UI elements are made using Nested Symbols and shared
-              styles that are logically connected with one another.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>
-          Long headline on two lines to turn your visitors into users and
-          achieve more
-        </h2>
-        <p>
-          Separated they live in Bookmarks right at the coast of the famous
-          Semantics, large language ocean
-        </p>
-        <ul>
-          <li>Showcase and embed your work with</li>
-          <li>Publish across social channels in a click</li>
-          <li>Sell your videos worldwide</li>
-          <li>Embed your work with</li>
-        </ul>
-        <img
-          src="./images/example-img.jpg"
-          alt="shelf with dishes"
-          width="550"
-          height="428"
-        />
-      </section>
-      <section>
-        <h2>review</h2>
-        <ul>
-          <li>
-            <p>
-              A testimonial describing what the person thinks about this
-              service, product or startup in general.
-            </p>
-            <img
-              width="64"
-              height="64"
-              src="./images/img-monika.png"
-              alt="monika"
-            />
-            <h3>Name Surname</h3>
-            <p>Description</p>
-          </li>
-          <li>
-            <p>
-              A testimonial describing what the person thinks about this
-              service, product or startup in general.
-            </p>
-            <img
-              width="64"
-              height="64"
-              src="./images/img-paula.png"
-              alt="paula"
-            />
-            <h3>Name Surname</h3>
-            <p>Description</p>
-          </li>
-          <li>
-            <p>
-              A testimonial describing what the person thinks about this
-              service, product or startup in general.
-            </p>
-            <img
-              width="64"
-              height="64"
-              src="./images/img-dominik.png"
-              alt="dominik"
-            />
-            <h3>Name Surname</h3>
-            <p>Description</p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <p>Tagline</p>
-        <h2>Long headline to turn your visitors into users</h2>
-        <button type="button">Action</button>
-      </section>
-    </main>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/styles.css" />
+	</head>
+	<body>
+		<header>
+			<div class="header-container">
+				<a class="logo link" href="./index.html">brand <sup class="logo-tm">tm</sup></a>
+				<nav>
+					<ul class="nav-list">
+						<li class="nav-list-item"><a class="nav-list-link link" href="#">Link 1</a></li>
+						<li class="nav-list-item"><a class="nav-list-link link" href="#">Link 2</a></li>
+						<li class="nav-list-item"><a class="nav-list-link link" href="#">Link 3</a></li>
+						<li class="nav-list-item"><a class="nav-list-link link" href="#">Link 4</a></li>
+						<li class="nav-list-item"><a class="nav-list-link link" href="#">Link 5</a></li>
+					</ul>
+				</nav>
+				<button class="header-btn" type="button">Action</button></div
+			>
+		</header>
+		<main>
+			<section>
+				<h1>Medium length display headline</h1>
+				<p> Separated they live in Bookmarks right at the coast of the famous Semantics, large language </p>
+				<button type="button">Action</button>
+				<p>5,000 people like you have purchased this product!</p>
+				<img src="./images/hero-img.jpg" alt="room" width="553" height="428" />
+			</section>
+			<section>
+				<h2 hidden>Advantages</h2>
+				<ul>
+					<li>
+						<h3>Feature one</h3>
+						<p>
+							All base UI elements are made using Nested Symbols and shared styles that are logically connected with one
+							another.
+						</p>
+					</li>
+					<li>
+						<h3>Feature two</h3>
+						<p>
+							All base UI elements are made using Nested Symbols and shared styles that are logically connected with one
+							another.
+						</p>
+					</li>
+					<li>
+						<h3>Feature three</h3>
+						<p>
+							All base UI elements are made using Nested Symbols and shared styles that are logically connected with one
+							another.
+						</p>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<h2> Long headline on two lines to turn your visitors into users and achieve more </h2>
+				<p> Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean </p>
+				<ul>
+					<li>Showcase and embed your work with</li>
+					<li>Publish across social channels in a click</li>
+					<li>Sell your videos worldwide</li>
+					<li>Embed your work with</li>
+				</ul>
+				<img src="./images/example-img.jpg" alt="shelf with dishes" width="550" height="428" />
+			</section>
+			<section>
+				<h2>review</h2>
+				<ul>
+					<li>
+						<p> A testimonial describing what the person thinks about this service, product or startup in general. </p>
+						<img width="64" height="64" src="./images/img-monika.png" alt="monika" />
+						<h3>Name Surname</h3>
+						<p>Description</p>
+					</li>
+					<li>
+						<p> A testimonial describing what the person thinks about this service, product or startup in general. </p>
+						<img width="64" height="64" src="./images/img-paula.png" alt="paula" />
+						<h3>Name Surname</h3>
+						<p>Description</p>
+					</li>
+					<li>
+						<p> A testimonial describing what the person thinks about this service, product or startup in general. </p>
+						<img width="64" height="64" src="./images/img-dominik.png" alt="dominik" />
+						<h3>Name Surname</h3>
+						<p>Description</p>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<p>Tagline</p>
+				<h2>Long headline to turn your visitors into users</h2>
+				<button type="button">Action</button>
+			</section>
+		</main>
 
-    <footer>
-      <a href="./index.html">brand <sup>tm</sup></a>
-      <p>First column</p>
-      <ul>
-        <li>First page</li>
-        <li>Second page</li>
-        <li>Third</li>
-        <li>Fourth</li>
-      </ul>
-      <p>Second</p>
-      <ul>
-        <li>Fifth page</li>
-        <li>Sixth page</li>
-        <li>Eighth</li>
-      </ul>
-      <p>Third</p>
-      <ul>
-        <li>Fifth page</li>
-        <li>Sixth page</li>
-        <li>Eighth</li>
-      </ul>
-      <p>Subscribe</p>
-      <input type="text" placeholder="Enter email" />
-      <p>Join our newsletter to stay up to date on features and releases</p>
-    </footer>
-  </body>
+		<footer>
+			<a href="./index.html">brand <sup>tm</sup></a>
+			<p>First column</p>
+			<ul>
+				<li>First page</li>
+				<li>Second page</li>
+				<li>Third</li>
+				<li>Fourth</li>
+			</ul>
+			<p>Second</p>
+			<ul>
+				<li>Fifth page</li>
+				<li>Sixth page</li>
+				<li>Eighth</li>
+			</ul>
+			<p>Third</p>
+			<ul>
+				<li>Fifth page</li>
+				<li>Sixth page</li>
+				<li>Eighth</li>
+			</ul>
+			<p>Subscribe</p>
+			<input type="text" placeholder="Enter email" />
+			<p>Join our newsletter to stay up to date on features and releases</p>
+		</footer>
+	</body>
 </html>
