--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
 			>
 		</header>
 		<main>
-			<section>
-				<h1>Medium length display headline</h1>
-				<p> Separated they live in Bookmarks right at the coast of the famous Semantics, large language </p>
-				<button type="button">Action</button>
-				<p>5,000 people like you have purchased this product!</p>
-				<img src="./images/hero-img.jpg" alt="room" width="553" height="428" />
+			<section class="hero">
+				<div class="container">
+				<div><h1 class="hero-title">Medium length display headline</h1>
+				<p class="hero-text"> Separated they live in Bookmarks right at the coast of the famous Semantics, large language </p>
+					<div class="button-text">
+				<button type="button" class="hero-btn">Action</button>
+				<p class="hero-desc">5,000 people like you have purchased this product!</p> 
+					</div>
+				</div>
+				<img class="hero-img" src="./images/hero-img.jpg" alt="room" width="553" height="428" />
+				</div>
 			</section>
 			<section>
 				<h2 hidden>Advantages</h2>
