--- a/index.html
+++ b/index.html
@@ -33,41 +33,46 @@
 		<main>
 			<section class="hero">
 				<div class="container">
-				<div><h1 class="hero-title">Medium length display headline</h1>
-				<p class="hero-text"> Separated they live in Bookmarks right at the coast of the famous Semantics, large language </p>
-					<div class="button-text">
-				<button type="button" class="hero-btn">Action</button>
-				<p class="hero-desc">5,000 people like you have purchased this product!</p> 
+					<div
+						><h1 class="hero-title">Medium length display headline</h1>
+						<p class="hero-text">
+							Separated they live in Bookmarks right at the coast of the famous Semantics, large language
+						</p>
+						<div class="button-text">
+							<button type="button" class="hero-btn">Action</button>
+							<p class="hero-desc">5,000 people like you have purchased this product!</p>
+						</div>
 					</div>
-				</div>
-				<img class="hero-img" src="./images/hero-img.jpg" alt="room" width="553" height="428" />
+					<img class="hero-img" src="./images/hero-img.jpg" alt="room" width="553" height="428" />
 				</div>
 			</section>
-			<section>
-				<h2 hidden>Advantages</h2>
-				<ul>
-					<li>
-						<h3>Feature one</h3>
-						<p>
-							All base UI elements are made using Nested Symbols and shared styles that are logically connected with one
-							another.
-						</p>
-					</li>
-					<li>
-						<h3>Feature two</h3>
-						<p>
-							All base UI elements are made using Nested Symbols and shared styles that are logically connected with one
-							another.
-						</p>
-					</li>
-					<li>
-						<h3>Feature three</h3>
-						<p>
-							All base UI elements are made using Nested Symbols and shared styles that are logically connected with one
-							another.
-						</p>
-					</li>
-				</ul>
+			<section class="advantages">
+				<div class="container">
+					<h2 hidden>Advantages</h2>
+					<ul class="advantages-list">
+						<li class="advantages-item">
+							<h3 class="advantages-title">Feature one</h3>
+							<p class="advantages-text">
+								All base UI elements are made using Nested Symbols and shared styles that are logically connected with
+								one another.
+							</p>
+						</li>
+						<li class="advantages-item">
+							<h3 class="advantages-title">Feature two</h3>
+							<p class="advantages-text">
+								All base UI elements are made using Nested Symbols and shared styles that are logically connected with
+								one another.
+							</p>
+						</li>
+						<li class="advantages-item">
+							<h3 class="advantages-title">Feature three</h3>
+							<p class="advantages-text">
+								All base UI elements are made using Nested Symbols and shared styles that are logically connected with
+								one another.
+							</p>
+						</li>
+					</ul>
+				</div>
 			</section>
 			<section>
 				<h2> Long headline on two lines to turn your visitors into users and achieve more </h2>
