--- a/index.html
+++ b/index.html
@@ -74,16 +74,20 @@
 					</ul>
 				</div>
 			</section>
-			<section>
-				<h2> Long headline on two lines to turn your visitors into users and achieve more </h2>
-				<p> Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean </p>
-				<ul>
-					<li>Showcase and embed your work with</li>
-					<li>Publish across social channels in a click</li>
-					<li>Sell your videos worldwide</li>
-					<li>Embed your work with</li>
+			<section class="descr">
+				<div class="container">
+					<div>
+				<h2 class="descr-title"> Long headline on two lines to turn your visitors into users and achieve more </h2>
+				<p class="descr-text"> Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean </p>
+				<ul class="descr-list">
+					<li class="descr-item">Showcase and embed your work with</li>
+					<li class="descr-item">Publish across social channels in a click</li>
+					<li class="descr-item">Sell your videos worldwide</li>
+					<li class="descr-item">Embed your work with</li>
 				</ul>
-				<img src="./images/example-img.jpg" alt="shelf with dishes" width="550" height="428" />
+				</div>
+				<img class="shelf-img" src="./images/example-img.jpg" alt="shelf with dishes" width="550" height="428" />
+				</div>
 			</section>
 			<section>
 				<h2>review</h2>
