--- a/index.html
+++ b/index.html
@@ -77,40 +77,98 @@
 			<section class="descr">
 				<div class="container">
 					<div>
-				<h2 class="descr-title"> Long headline on two lines to turn your visitors into users and achieve more </h2>
-				<p class="descr-text"> Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean </p>
-				<ul class="descr-list">
-					<li class="descr-item">Showcase and embed your work with</li>
-					<li class="descr-item">Publish across social channels in a click</li>
-					<li class="descr-item">Sell your videos worldwide</li>
-					<li class="descr-item">Embed your work with</li>
-				</ul>
-				</div>
-				<img class="shelf-img" src="./images/example-img.jpg" alt="shelf with dishes" width="550" height="428" />
+						<h2 class="descr-title"> Long headline on two lines to turn your visitors into users and achieve more </h2>
+						<p class="descr-text">
+							Separated they live in Bookmarks right at the coast of the famous Semantics, large language ocean
+						</p>
+						<ul class="descr-list">
+							<li class="descr-item">Showcase and embed your work with</li>
+							<li class="descr-item">Publish across social channels in a click</li>
+							<li class="descr-item">Sell your videos worldwide</li>
+							<li class="descr-item">Embed your work with</li>
+						</ul>
+					</div>
+					<img class="shelf-img" src="./images/example-img.jpg" alt="shelf with dishes" width="550" height="428" />
 				</div>
 			</section>
-			<section>
-				<h2>review</h2>
-				<ul>
-					<li>
-						<p> A testimonial describing what the person thinks about this service, product or startup in general. </p>
-						<img width="64" height="64" src="./images/img-monika.png" alt="monika" />
-						<h3>Name Surname</h3>
-						<p>Description</p>
-					</li>
-					<li>
-						<p> A testimonial describing what the person thinks about this service, product or startup in general. </p>
-						<img width="64" height="64" src="./images/img-paula.png" alt="paula" />
-						<h3>Name Surname</h3>
-						<p>Description</p>
-					</li>
-					<li>
-						<p> A testimonial describing what the person thinks about this service, product or startup in general. </p>
-						<img width="64" height="64" src="./images/img-dominik.png" alt="dominik" />
-						<h3>Name Surname</h3>
-						<p>Description</p>
-					</li>
-				</ul>
+			<section class="review">
+				<div class="container">
+					<h2 class="visually-hidden">review</h2>
+					<ul class="review-list">
+						<li class="review-item">
+							<p class="review-text">
+								A testimonial describing what the person thinks about this service, product or startup in general.
+							</p>
+							<div class="review-box">
+								<div>
+									<img width="64" height="64" src="./images/img-monika.png" alt="monika" />
+									<h3 class="review-title">Name Surname</h3>
+									<p class="review-desc">Description</p>
+								</div>
+								<ul class="review-list-icon">
+									<li
+										><a href="">
+											<svg width="16" height="16">
+												<use href="./images/icon.svg#icon-facebook"></use></svg></a
+									></li>
+									<li
+										><a href="">
+											<svg width="16" height="16">
+												<use href="./images/icon.svg#icon-twiter"></use></svg></a
+									></li>
+								</ul>
+							</div >
+						</li>
+						<li class="review-item">
+							<p class="review-text">
+								A testimonial describing what the person thinks about this service, product or startup in general.
+							</p>
+							<div class="review-box">
+								<div>
+									<img width="64" height="64" src="./images/img-paula.png" alt="paula" />
+									<h3 class="review-title">Name Surname</h3>
+									<p class="review-desc">Description</p>
+								</div>
+								<ul class="review-list-icon">
+									<li
+										><a href="">
+											<svg width="16" height="16">
+												<use href="./images/icon.svg#icon-facebook"></use></svg></a
+									></li>
+									<li
+										><a href="">
+											<svg width="16" height="16">
+												<use href="./images/icon.svg#icon-twiter"></use></svg></a
+									></li>
+								</ul>
+							</div>
+						</li>
+						<li class="review-item">
+							<p class="review-text">
+								A testimonial describing what the person thinks about this service, product or startup in general.
+							</p>
+							<div class="review-box">
+								<div>
+									<img width="64" height="64" src="./images/img-dominik.png" alt="dominik" />
+									<h3 class="review-title">Name Surname</h3>
+									<p class="review-desc">Description</p>
+								</div>
+								<ul class="review-list-icon">
+									<li
+										><a href="">
+											<svg width="16" height="16">
+												<use href="./images/icon.svg#icon-facebook"></use></svg></a
+									></li>
+									<li
+										><a href="">
+											<svg width="16" height="16">
+												<use href="./images/icon.svg#icon-twiter"></use></svg></a
+									></li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</section>
 			<section>
 				<p>Tagline</p>
