--- a/index.html
+++ b/index.html
@@ -170,10 +170,12 @@
 					</ul>
 				</div>
 			</section>
-			<section>
-				<p>Tagline</p>
-				<h2>Long headline to turn your visitors into users</h2>
-				<button type="button">Action</button>
+			<section class="action">
+				<div class="container">
+				<p class="action-pre-title">Tagline</p>
+				<h2 class="action-title">Long headline to turn your visitors into users</h2>
+				<button class="action-button" type="button">Action</button>
+				</div>
 			</section>
 		</main>
 
