--- a/index.html
+++ b/index.html
@@ -179,30 +179,47 @@
 			</section>
 		</main>
 
-		<footer>
-			<a href="./index.html">brand <sup>tm</sup></a>
-			<p>First column</p>
-			<ul>
-				<li>First page</li>
-				<li>Second page</li>
-				<li>Third</li>
-				<li>Fourth</li>
+		<footer class="footer">
+			<div class="container ">
+			<a href="./index.html" class="footer-logo">brand <sup class="footer-logo-tm">tm</sup></a>
+			<div>
+			<p class="footer-title">First column</p>
+			<ul class="footer-list">
+				<li class="footer-item">First page</li>
+				<li class="footer-item">Second page</li>
+				<li class="footer-item">Third</li>
+				<li class="footer-item">Fourth</li>
 			</ul>
-			<p>Second</p>
-			<ul>
-				<li>Fifth page</li>
-				<li>Sixth page</li>
-				<li>Eighth</li>
+			</div>
+			<div>
+			<p class="footer-title">Second</p>
+			<ul class="footer-list">
+				<li class="footer-item">Fifth page</li>
+				<li class="footer-item">Sixth page</li>
+				<li class="footer-item">Eighth</li>
 			</ul>
-			<p>Third</p>
-			<ul>
-				<li>Fifth page</li>
-				<li>Sixth page</li>
-				<li>Eighth</li>
+			</div>
+			<div>
+			<p class="footer-title">Third</p>
+			<ul class="footer-list">
+				<li class="footer-item">Fifth page</li>
+				<li class="footer-item">Sixth page</li>
+				<li class="footer-item">Eighth</li>
 			</ul>
-			<p>Subscribe</p>
-			<input type="text" placeholder="Enter email" />
-			<p>Join our newsletter to stay up to date on features and releases</p>
+			</div>
+			<div>
+			<p class="footer-title">Subscribe</p>
+			<form class="footer-form"
+			action="">
+			<input class="footer-input" type="text" placeholder="Enter email" />
+			<svg class="telegr-icon" width="24" height="24">
+				<use href="./images/icon.svg#icon-telegram"></use>
+			</svg>
+			
+			<p class="footer-dcr">Join our newsletter to stay up to date on features and releases</p>
+			</form>
+			</div>
+			</div>
 		</footer>
 	</body>
 </html>
